<resources>
    <string name="app_name">Quotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="story_behind_it">Story Behind It</string>

    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>

    <!-- SideMenu -->
    <string name="qotd_label">Q.O.T.D</string>
    <string name="all_quotes_label">All</string>
    <string name="favorite_label">Favorites</string>
    <string name="profile_label">Profile</string>
    <string name="home_label">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="username_label">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="no_input_entered">Please enter your username and password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="swipe_up_to_register">swipe up to register</string>
    <string name="swipe_down_to_cancel">swipe down to cancel registration</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="forgotpwd">Did you forgot your password ?</string>
    <string name="logout">Log out</string>
    <string name="write_the_email_to_receive_password_reset_request">Write the email to receive password reset request</string>
    <string name="email_label">Email:</string>
    <string name="update_to_your_new_email">Update to your new email</string>
    <string name="birthplace">Birthplace:</string>
    <string name="birthdate">Birth date:</string>
    <string name="update_your_birthplace">Update your birth place</string>
    <string name="update_your_birthdate">Update your birth date</string>
    <string name="user_info">User Info</string>
    <string name="platforms">Platforms</string>
    <string name="account_management">Account Management</string>
    <string name="settings">Settings</string>
    <string name="register">Create New Account</string>
    <string name="register_method_label">or register by using your email</string>

    <string name="email_sent_successfully">Password reset request is sent successfully \u2713 </string>
    <string name="email_sent_failed">Password reset request has failed \u2716 </string>

    <string name="empty_email_input">Please enter your email.</string>
</resources>