<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/registerFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/believe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_gravity="start"
        android:hint="@string/prompt_email"
        android:textStyle="bold"
        android:textSize="@dimen/subTitleSize"
        android:inputType="textEmailAddress"
        android:background="@android:color/transparent"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:textSize="@dimen/subTitleSize"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:background="@drawable/button_rounded_corners_bg"
        android:enabled="false"
        android:padding="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpwd"
        android:textSize="14sp"
        android:layout_gravity="end"
        android:textColor="@android:color/black"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="25dp"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />



    <include layout="@layout/layout_register" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>