<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black40000000">

    <View
        android:id="@+id/dialogContainer"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/dialog_rounded_corners"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemonmilkmedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_margin="15dp"
        android:maxEms="16"
        app:layout_constraintTop_toTopOf="@id/dialogContainer"
        app:layout_constraintBottom_toTopOf="@id/emailET"
        app:layout_constraintStart_toStartOf="@id/emailET"
        app:layout_constraintEnd_toEndOf="@id/emailET"
        tools:text="Write the email to receive password reset request"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/dialogContainer"
        app:layout_constraintStart_toStartOf="@id/dialogContainer"
        app:layout_constraintEnd_toStartOf="@id/titleTV"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemonmilkmedium"
        android:hint="@string/email"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        app:layout_constraintEnd_toEndOf="@id/dialogContainer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/dialogContainer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/lemonmilkmedium"
        android:text="@string/send"
        android:drawableStart="@drawable/ic_send"
        app:layout_constraintTop_toBottomOf="@id/emailET"
        app:layout_constraintStart_toStartOf="@id/dialogContainer"
        app:layout_constraintEnd_toEndOf="@id/dialogContainer"
        app:layout_constraintBottom_toBottomOf="@id/dialogContainer"/>
</androidx.constraintlayout.widget.ConstraintLayout>